# lz7

./: CMakeLists.txt
include/: lz7.hpp  myargs.hpp
samples/: 2.txt  4.txt  5.txt
src/: decoder.cpp  main.cpp  parser.cpp
tests/: mac-clear.sh  mac-run.sh  results.txt  windows-clear.cmd  windows-run.cmd
